--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bar Chart</title>
 </head>
@@ -14,9 +14,9 @@
     <h1 id="title">United States GPD</h1>
     <div class="container"></div>
   </main>
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="/js/main.js"></script>
+
+  <script src="js/d3.v5.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 
