--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bar Chart</title>
+  <title>Heat Map</title>
 </head>
 
 <body>
-  <main>
-    <h1 id="title">United States GPD</h1>
-    <div class="container"></div>
-  </main>
-
   <script src="js/d3.v5.min.js"></script>
   <script src="js/main.js"></script>
 </body>
